--- a/assets/css/templatemo-chain-app-dev.css
+++ b/assets/css/templatemo-chain-app-dev.css
@@ -2453,6 +2453,17 @@ responsive
   color: #2a2a2a;
 }
 
+.gradient-button .btn-reset{
+  padding: 12px 30px;
+  border: 0;
+  border-radius: 50px;            /* adjust if needed */
+  color: #fff;
+  cursor: pointer;
+  background: linear-gradient(105deg, #8e3cb4, #ff4fd8);
+}
+
+
+
 #service-popup-modal .close.service-popup-close-btn {
   background: #8e3cb4;
   border: 0;
